force-app/main/default/objects/C360_Report__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thai Oil Report</fullName>
                </value>
                <value>
                    <fullName>Labix Report</fullName>
                </value>
                <value>
                    <fullName>TLB Report</fullName>
                </value>
                <value>
                    <fullName>TPX Report</fullName>
                </value>
                <value>
                    <fullName>TX Report</fullName>
                </value>
                <value>
                    <fullName>TOP and TX Report</fullName>
                </value>
                <value>
                    <fullName>Sales Activities Report</fullName>
                </value>
                <value>
                    <fullName>ICare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Lifting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VPN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VPN Requirement</label>
        <type>Checkbox</type>
    </fields>
    <label>Report</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>